<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/reminder_bar_pdf"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:contentDescription="@string/filter_pdf"
        android:padding="5dp"
        android:src="@drawable/img_hold_bar_pdf" />

    <ImageView
        android:id="@+id/reminder_bar_excel"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:contentDescription="@string/filter_excel"
        android:padding="5dp"
        android:src="@drawable/img_hold_bar_excel" />

    <ImageView
        android:id="@+id/reminder_bar_ppt"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:contentDescription="@string/filter_ppt"
        android:padding="5dp"
        android:src="@drawable/img_hold_bar_ppt" />
</LinearLayout>
