<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rate_us"
        android:elevation="12dp"
        android:src="@mipmap/rate_us"
        app:layout_constraintBottom_toTopOf="@id/rateCard"
        app:layout_constraintEnd_toEndOf="@id/rateCard"
        app:layout_constraintStart_toStartOf="@id/rateCard"
        app:layout_constraintTop_toTopOf="@id/rateCard" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rateCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="28dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/we_glad"
                android:textColor="#333333"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/rateContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleText">

                <ImageView
                    android:id="@+id/rateStar1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/rating_star_1"
                    android:scaleType="centerInside"
                    android:src="@mipmap/heart_all" />

                <ImageView
                    android:id="@+id/rateStar2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/rating_star_2"
                    android:scaleType="centerInside"
                    android:src="@mipmap/heart_all" />

                <ImageView
                    android:id="@+id/rateStar3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/rating_star_3"
                    android:scaleType="centerInside"
                    android:src="@mipmap/heart_all" />

                <ImageView
                    android:id="@+id/rateStar4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/rating_star_4"
                    android:scaleType="centerInside"
                    android:src="@mipmap/heart_all" />

                <ImageView
                    android:id="@+id/rateStar5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/rating_star_5"
                    android:scaleType="centerInside"
                    android:src="@mipmap/heart_all" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/rateContainer">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_bg_cancel"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/cancel"
                    android:textColor="#CCCCCC"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/okButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_bg_btn_red"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>