<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet_panel"
    android:paddingBottom="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/permission_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/overlay_permission_title"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1328:680"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_overlay" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/permission_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/overlay_permission_title"
        android:textColor="@color/text_primary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/allow_button"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_uninstall_primary_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/allow_permission"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_title" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/close_button"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:elevation="8dp"
        android:padding="10dp"
        android:translationZ="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_permission_close" />

</androidx.constraintlayout.widget.ConstraintLayout>
